minor fix on preview, css alignment

--- a/backend/base/static/css/preview_styles.css
+++ b/backend/base/static/css/preview_styles.css
@@ -58,12 +58,14 @@ hr {
     font-size: 0.9rem;
 }
 
-footer {
+.footer {
     background-color: #f8f9fa;
     padding: 10px 0;
     text-align: center;
     margin-top: auto;
-    width: 100%;
+    width: 104%;
+    margin-left: -18px;
+    margin-bottom: -20px;
     border-top: 1px solid #e0e0e0;
 
     a {
